--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	
 	//oauth, jwt
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
