--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -22,10 +22,14 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
 }
 
 ext {
 	set('springCloudVersion', "2025.0.0")
+	// ▼ Spring AI BOM 버전(부트 3.5와 호환되는 안정판)
+	set('springAiVersion', "1.0.0-M2")
+
 }
 
 dependencies {
@@ -54,11 +58,21 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	
+	// ==========================
+	// === Spring AI 의존성 ===
+	// ==========================
+	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+	// (필요 시 이미지/벡터 검색 등 추가)
+	// implementation 'org.springframework.ai:spring-ai-openai-image'
+	// implementation 'org.springframework.ai:spring-ai-azure-openai-spring-boot-starter'
 }
 
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		// ▼ Spring AI BOM
+		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
 	}
 }
 
