--- a/FE/package.json
+++ b/FE/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
+    "@stomp/stompjs": "^7.2.1",
     "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.13.1",
@@ -24,6 +25,7 @@
     "react-kakao-maps-sdk": "^1.2.0",
     "react-router-dom": "^7.9.5",
     "recoil": "^0.7.7",
+    "sockjs-client": "^1.6.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
